fixed Nav and cleaned HTML

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 <section class=backgroundImg-about>
 </section>
 
-<!-- about -->
+<!-- section1-about -->
 <div class="container about-page">
       <div class="about">
         <h2>About</h2>
@@ -38,7 +38,7 @@
         <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
       </div>
 
-<!-- section1-about -->
+<!-- section2-about -->
     <div class="boxes-about">
       <div class="box-container-about">
         <img src="img/about-plan.png" alt="strategy">
@@ -79,11 +79,13 @@
         <a href="">Learn More</a>
       </div>
     </div>
+<!-- section3-about -->
     <section id="section3-about">
       <h2>Let's Work Together</h2>
 
       <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-    </section>  
+    </section> 
+<!-- footer-about  -->
   <footer>
     <nav>
       <a href="index.html">Home</a>
